--- a/src/FacebookAutomation/Views/Shared/_Layout.cshtml
+++ b/src/FacebookAutomation/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
     <title>@ViewData["Title"] - FacebookAutomation</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="description" content="facebookpub,faire publicité sur facebook">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-    <meta name="description" content="Biss HTML5/CSS3 Template v1.0">
+    <meta name="description" content="publication automatique facebook">
     <meta name="author" content="Itinnovation">
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -55,7 +55,7 @@
 
                             <div class="site-logo scroll-hide">
 
-                                <a href="#">
+                                <a href="/">
 
                                     <img src="~/biss/img/site-logo.png" alt="biss Logo">
 
@@ -168,11 +168,11 @@
 
                                     </li>
 
-                                    @*<li>
+                                    <li>
 
-                                        <a asp-controller="Home" asp-action="Galerie"><i class="fa fa-file-text-o"></i> Album <small>Capture d'ecran</small></a>
+                                        <a asp-controller="Home" asp-action="Congratulation"><i class="fa fa-file-text-o"></i> Album <small>Capture d'ecran</small></a>
 
-                                    </li>*@
+                                    </li>
 
                                     <li>
 
