--- a/src/FacebookAutomation/Views/Account/Login.cshtml
+++ b/src/FacebookAutomation/Views/Account/Login.cshtml
@@ -5,164 +5,171 @@
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Se connecter";
 }
 
-<h2>@ViewData["Title"].</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section>
-            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Email" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            <input asp-for="RememberMe" />
-                            <label asp-for="RememberMe"></label>
+@*<h2>@ViewData["Title"].</h2>*@
+
+<section class="align-left">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <section>
+                    <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+                        <h4>Connexion</h4>
+                        <hr />
+                        <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="Email" class="col-md-2 control-label"></label>
+                            <div class="col-md-10">
+                                <input asp-for="Email" class="form-control" />
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <button type="submit" class="btn btn-default">Log in</button>
-                    </div>
-                </div>
-                @*<p>
-                    <a asp-action="Register">Register as a new user?</a>
-                </p>*@
-                <p>
-                    <a asp-action="ForgotPassword">Forgot your password?</a>
-                </p>
-            </form>
-        </section>
-    </div>
-    @*<div class="col-md-4">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
-                if (loginProviders.Count == 0)
-                {
-            <div>
-                <p>
-                    There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                    for details on setting up this ASP.NET application to support logging in via external services.
-                </p>
+                        <div class="form-group">
+                            <label asp-for="Password" class="col-md-2 control-label"></label>
+                            <div class="col-md-10">
+                                <input asp-for="Password" class="form-control" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <div class="checkbox">
+                                    <input asp-for="RememberMe" />
+                                    <label asp-for="RememberMe"></label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <button type="submit" class="btn btn-default">Se connecter</button>
+                            </div>
+                        </div>
+                        @*<p>
+                                <a asp-action="Register">Register as a new user?</a>
+                            </p>*@
+                        <p>
+                            <a asp-action="ForgotPassword">Mot de passe oublié?</a>
+                        </p>
+                    </form>
+                </section>
             </div>
-                }
-                else
-                {
-            <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-                <div>
-                    <p>
-                        @foreach (var provider in loginProviders)
-                                {
-                                <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
-                                }
-                    </p>
-                </div>
-            </form>
-                }
-            }
-        </section>
-    </div>*@
-</div>
+            @*<div class="col-md-4">
+                    <section>
+                        <h4>Use another service to log in.</h4>
+                        <hr />
+                        @{
+                            var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
+                            if (loginProviders.Count == 0)
+                            {
+                        <div>
+                            <p>
+                                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                for details on setting up this ASP.NET application to support logging in via external services.
+                            </p>
+                        </div>
+                            }
+                            else
+                            {
+                        <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+                            <div>
+                                <p>
+                                    @foreach (var provider in loginProviders)
+                                            {
+                                            <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
+                                            }
+                                </p>
+                            </div>
+                        </form>
+                            }
+                        }
+                    </section>
+                </div>*@
+        </div>
+
+        </div>
+    </section>
 
 
-@section scriptcss {
-    <!-- CSS includes //-->
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
+        @section scriptcss {
+            <!-- CSS includes //-->
+            <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
+            <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
+            <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+            <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
+            <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
+            <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
+            <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+            <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
+            <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
 
-    <!-- LayerSlider styles -->
-    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
+            <!-- LayerSlider styles -->
+            <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
 
-    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
-    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
+            <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
+            <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
 
-    <!-- JS includes //-->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="~/biss/js/twitterFetcher_min.js"></script>
-}
+            <!-- JS includes //-->
+            <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
+            <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+            <![endif]-->
+            <script src="~/biss/js/twitterFetcher_min.js"></script>
+        }
 
-@section Scripts {
+        @section Scripts {
 
-    <!-- JS includes //-->
-    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
-    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
-    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
-    <script src="~/biss/js/masonry.pkgd.min.js"></script>
-    <script src="~/biss/js/less-1.7.4.min.js"></script>
-    <script src="~/biss/js/jquery.colorbox-min.js"></script>
-    <script src="~/biss/js/jquery.easing.1.3.js"></script>
-    <script src="~/biss/js/jquery.rivathemes.js"></script>
-    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
-    <script src="~/biss/js/biss.js"></script>
+            <!-- JS includes //-->
+            <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
+            <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+            <script src="~/biss/js/vendor/bootstrap.min.js"></script>
+            <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
+            <script src="~/biss/js/masonry.pkgd.min.js"></script>
+            <script src="~/biss/js/less-1.7.4.min.js"></script>
+            <script src="~/biss/js/jquery.colorbox-min.js"></script>
+            <script src="~/biss/js/jquery.easing.1.3.js"></script>
+            <script src="~/biss/js/jquery.rivathemes.js"></script>
+            <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
+            <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
+            <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
+            <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
+            <script src="~/biss/js/biss.js"></script>
 
-    <script>
-        (function ($) {
-            "use strict";
+            <script>
+                (function ($) {
+                    "use strict";
 
-            //
-            // Preload images
-            //
+                    //
+                    // Preload images
+                    //
 
-            $('document').ready(function () {
+                    $('document').ready(function () {
 
-                var $container = $('body'),
-                    tweetsTimer;
+                        var $container = $('body'),
+                            tweetsTimer;
 
-                $container.imagesLoaded(function () {
+                        $container.imagesLoaded(function () {
 
-                    $('#spinner-wrapper').hide();
+                            $('#spinner-wrapper').hide();
 
-                });
+                        });
 
-                clearTimeout(tweetsTimer);
+                        clearTimeout(tweetsTimer);
 
-                $('#sendMessageBtn').click(function (e) {
-                    e.preventDefault();
-                    processSendEmail();
-                });
+                        $('#sendMessageBtn').click(function (e) {
+                            e.preventDefault();
+                            processSendEmail();
+                        });
 
-            });
+                    });
 
-        })(jQuery);
-    </script>
+                })(jQuery);
+            </script>
 
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
+            @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+        }
