--- a/src/FacebookAutomation/Views/Shared/_LoginPartial.cshtml
+++ b/src/FacebookAutomation/Views/Shared/_LoginPartial.cshtml
@@ -5,10 +5,10 @@
     <form asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-controller="Manage" asp-action="Index" title="Manage">Hello @User.GetUserName()!</a>
+                <a asp-controller="Manage" asp-action="Index" title="Manage">Salut @User.GetUserName()!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">Se deconnecter</button>
             </li>
         </ul>
     </form>
@@ -17,6 +17,6 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         @*<li><a asp-controller="Account" asp-action="Register">Register</a></li>*@
-        <li><a asp-controller="Account" asp-action="Login">Connection Client</a></li>
+        <li><a asp-controller="Account" asp-action="Login">Se connecter</a></li>
     </ul>
 }
