--- a/src/FacebookAutomation/Views/Shared/_Layout.cshtml
+++ b/src/FacebookAutomation/Views/Shared/_Layout.cshtml
@@ -170,7 +170,7 @@
 
                                     <li>
 
-                                        <a asp-controller="Home" asp-action="Congratulation"><i class="fa fa-file-text-o"></i> Album <small>Capture d'ecran</small></a>
+                                        <a asp-controller="Home" asp-action="ListeUtilisateur"><i class="fa fa-file-text-o"></i> Album <small>Capture d'ecran</small></a>
 
                                     </li>
 
