--- a/src/FacebookAutomation/Views/Manage/Index.cshtml
+++ b/src/FacebookAutomation/Views/Manage/Index.cshtml
@@ -3,108 +3,136 @@
     ViewData["Title"] = "Manage your account";
 }
 
-<h2>@ViewData["Title"].</h2>
-<p class="text-success">@ViewData["StatusMessage"]</p>
+
 
 <div>
-    <h4>Change your account settings</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>Password:</dt>
-        <dd>
-            @if (Model.HasPassword)
-            {
-            <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="ChangePassword">Change</a>&nbsp;&nbsp;]</text>
-            }
-            else
-            {
-            <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="SetPassword">Create</a>&nbsp;&nbsp;]</text>
-            }
-        </dd>
-        <dt>Gestion des licences:</dt>
-        <dd>
-           @Model.NbreLicence Licences a enregistrer @if(Model.NbreLicence > 0) {<text>[<a asp-controller="Manage" asp-action="ValiderLicence">Enregistrer une licence</a>&nbsp;&nbsp;]</text>}
-        </dd>
-    </dl>
+    
 </div>
 
 
-@section scriptcss {
-    <!-- CSS includes //-->
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
+<main class="site-main">
 
-    <!-- LayerSlider styles -->
-    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
+    <!-- Intro start //-->
 
-    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
-    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
+    <section class="align-left">
 
-    <!-- JS includes //-->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="~/biss/js/twitterFetcher_min.js"></script>
-}
+        <div class="container">
 
-@section Scripts {
+            <div class="row">
 
-    <!-- JS includes //-->
-    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
-    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
-    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
-    <script src="~/biss/js/masonry.pkgd.min.js"></script>
-    <script src="~/biss/js/less-1.7.4.min.js"></script>
-    <script src="~/biss/js/jquery.colorbox-min.js"></script>
-    <script src="~/biss/js/jquery.easing.1.3.js"></script>
-    <script src="~/biss/js/jquery.rivathemes.js"></script>
-    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
-    <script src="~/biss/js/biss.js"></script>
+                <h2>@ViewData["Title"].</h2>
+                <p class="text-success">@ViewData["StatusMessage"]</p>
 
-    <script>
-        (function ($) {
-            "use strict";
+                <div class="col-lg-10 col-md-10 sm-margin-bottom-70 md-margin-bottom-70">
 
-            //
-            // Preload images
-            //
 
-            $('document').ready(function () {
 
-                var $container = $('body'),
-                    tweetsTimer;
 
-                $container.imagesLoaded(function () {
+                    <h4>Change your account settings</h4>
+                    <hr />
+                    <dl class="dl-horizontal">
+                        <dt>Password:</dt>
+                        <dd>
+                            @if (Model.HasPassword)
+            {
+                                <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="ChangePassword">Change</a>&nbsp;&nbsp;]</text>
+                            }
+                            else
+                            {
+                                <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="SetPassword">Create</a>&nbsp;&nbsp;]</text>
+                            }
+                        </dd>
+                        <dt>Gestion des licences:</dt>
+                        <dd>
+                            @Model.NbreLicence Licences a enregistrer @if (Model.NbreLicence > 0)
+                            {<text>[<a asp-controller="Manage" asp-action="ValiderLicence">Enregistrer une licence</a>&nbsp;&nbsp;]</text>}
+                        </dd>
+                    </dl>
 
-                    $('#spinner-wrapper').hide();
 
-                });
 
-                clearTimeout(tweetsTimer);
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-                $('#sendMessageBtn').click(function (e) {
-                    e.preventDefault();
-                    processSendEmail();
-                });
+                    @section scriptcss {
+                        <!-- CSS includes //-->
+                        <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+                        <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+                        <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
+                        <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
+                        <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+                        <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
+                        <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
+                        <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
+                        <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+                        <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
+                        <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
 
-            });
+                        <!-- LayerSlider styles -->
+                        <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
 
-        })(jQuery);
-    </script>
+                        <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
+                        <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
 
-}
+                        <!-- JS includes //-->
+                        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
+                        <!--[if lt IE 9]>
+                        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+                        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+                        <![endif]-->
+                        <script src="~/biss/js/twitterFetcher_min.js"></script>
+                    }
+
+                    @section Scripts {
+
+                        <!-- JS includes //-->
+                        <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
+                        <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+                        <script src="~/biss/js/vendor/bootstrap.min.js"></script>
+                        <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
+                        <script src="~/biss/js/masonry.pkgd.min.js"></script>
+                        <script src="~/biss/js/less-1.7.4.min.js"></script>
+                        <script src="~/biss/js/jquery.colorbox-min.js"></script>
+                        <script src="~/biss/js/jquery.easing.1.3.js"></script>
+                        <script src="~/biss/js/jquery.rivathemes.js"></script>
+                        <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
+                        <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
+                        <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
+                        <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
+                        <script src="~/biss/js/biss.js"></script>
+
+                        <script>
+                            (function ($) {
+                                "use strict";
+
+                                //
+                                // Preload images
+                                //
+
+                                $('document').ready(function () {
+
+                                    var $container = $('body'),
+                                        tweetsTimer;
+
+                                    $container.imagesLoaded(function () {
+
+                                        $('#spinner-wrapper').hide();
+
+                                    });
+
+                                    clearTimeout(tweetsTimer);
+
+                                    $('#sendMessageBtn').click(function (e) {
+                                        e.preventDefault();
+                                        processSendEmail();
+                                    });
+
+                                });
+
+                            })(jQuery);
+                        </script>
+
+                    }
